--- a/index.html
+++ b/index.html
@@ -4,26 +4,27 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>JK VPN VIP Fast & Security</title>
-  <meta name="theme-color" content="#1a237e">
+  <meta name="theme-color" content="#8A2BE2">
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/3271/3271369.png" type="image/png">
   <style>
     :root {
-      --bg-color: #f5f7fa;
-      --text-color: #333;
-      --card-bg: #fff;
-      --plan-bg: #e3f2fd;
-      --led-color: #00FF00;
-      --primary-color: #1a237e;
-      --secondary-color: #0d47a1;
-      --accent-color: #00BFFF;
+      --bg-color: #0f0e17;
+      --text-color: #ffffff;
+      --card-bg: #1a1a2e;
+      --plan-bg: #16213e;
+      --primary-color: #8A2BE2; /* Purple */
+      --secondary-color: #FF1493; /* Pink */
+      --accent-color: #00FFFF; /* Cyan */
+      --highlight-color: #FFD700; /* Gold */
     }
     body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #f5f7fa 0%, #e4e8eb 100%);
+      font-family: 'Arial', sans-serif;
+      background: linear-gradient(135deg, #0f0e17 0%, #1a1a2e 100%);
       color: var(--text-color);
       margin: 0;
       padding: 80px 20px 20px;
       overflow-x: hidden;
+      line-height: 1.6;
     }
     .lang-switcher {
       text-align: center;
@@ -31,23 +32,24 @@
     }
     .lang-btn {
       border: none;
-      padding: 6px 10px;
+      padding: 8px 15px;
       margin: 0 5px;
-      border-radius: 6px;
+      border-radius: 30px;
       cursor: pointer;
       font-weight: bold;
-      background-color: var(--primary-color);
+      background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
       color: #fff;
       transition: all 0.3s ease;
+      box-shadow: 0 4px 10px rgba(138, 43, 226, 0.3);
     }
     .lang-btn:hover {
-      background-color: var(--secondary-color);
-      transform: translateY(-2px);
+      transform: translateY(-3px);
+      box-shadow: 0 6px 15px rgba(138, 43, 226, 0.5);
     }
     .running-banner {
-      background: var(--primary-color);
+      background: linear-gradient(90deg, var(--primary-color) 0%, var(--secondary-color) 100%);
       color: #fff;
-      padding: 10px;
+      padding: 12px;
       white-space: nowrap;
       overflow: hidden;
       position: fixed;
@@ -58,7 +60,8 @@
       font-weight: bold;
       z-index: 998;
       font-size: 18px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
+      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
     }
     .running-text {
       display: inline-block;
@@ -71,17 +74,18 @@
     }
     .led-text {
       text-align: center;
-      font-size: 28px;
+      font-size: 32px;
       font-weight: bold;
       background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
-      padding: 15px 10px;
+      padding: 15px;
       margin: 20px auto;
       border-radius: 12px;
-      letter-spacing: 1px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+      letter-spacing: 2px;
+      box-shadow: 0 6px 20px rgba(138, 43, 226, 0.5);
       max-width: 800px;
       color: white;
-      text-shadow: 0 2px 4px rgba(0,0,0,0.3);
+      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+      border: 2px solid var(--accent-color);
     }
     .lottie-container {
       width: 100%;
@@ -91,27 +95,31 @@
     }
     h1, h2 {
       text-align: center;
-      color: var(--primary-color);
+      color: var(--accent-color);
     }
     h1 {
-      font-size: 2.2rem;
+      font-size: 2.5rem;
       margin-bottom: 20px;
+      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
     }
     h2 {
-      font-size: 1.8rem;
+      font-size: 2rem;
       margin-top: 0;
+      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
     }
     .plans, .codes, .contact, .video-section {
       max-width: 800px;
       margin: 30px auto;
       background: var(--card-bg);
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      padding: 25px;
+      border-radius: 15px;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3);
       transition: transform 0.3s ease;
+      border: 1px solid rgba(138, 43, 226, 0.3);
     }
     .plans:hover, .codes:hover, .contact:hover, .video-section:hover {
       transform: translateY(-5px);
+      box-shadow: 0 12px 30px rgba(138, 43, 226, 0.4);
     }
     .plan-list {
       display: flex;
@@ -125,18 +133,24 @@
     }
     .plan-card {
       flex: 1;
-      background: linear-gradient(135deg, var(--plan-bg) 0%, #bbdefb 100%);
+      background: linear-gradient(135deg, var(--plan-bg) 0%, #1e1e3f 100%);
       padding: 20px;
-      border-radius: 10px;
+      border-radius: 12px;
       text-align: center;
       font-weight: bold;
-      color: var(--primary-color);
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      color: var(--accent-color);
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
       transition: all 0.3s ease;
+      border: 1px solid var(--primary-color);
     }
     .plan-card:hover {
-      transform: scale(1.03);
-      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+      transform: scale(1.05);
+      box-shadow: 0 8px 20px rgba(138, 43, 226, 0.5);
+    }
+    .highlight {
+      color: var(--highlight-color);
+      font-weight: bold;
+      font-size: 1.2em;
     }
     .download {
       text-align: center;
@@ -146,23 +160,24 @@
       display: inline-block;
       background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
       color: white;
-      padding: 15px 30px;
+      padding: 15px 35px;
       border-radius: 30px;
       text-decoration: none;
       font-weight: bold;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+      box-shadow: 0 6px 20px rgba(138, 43, 226, 0.4);
       transition: all 0.3s ease;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
+      border: 2px solid var(--accent-color);
     }
     .download a:hover {
       transform: translateY(-3px);
-      box-shadow: 0 6px 20px rgba(0,0,0,0.3);
+      box-shadow: 0 10px 25px rgba(138, 43, 226, 0.6);
     }
     .images {
       display: flex;
       justify-content: space-around;
       flex-direction: column;
-      gap: 15px;
+      gap: 20px;
       margin-top: 20px;
     }
     @media(min-width: 600px) {
@@ -172,48 +187,52 @@
     }
     .images img {
       width: 100%;
-      border-radius: 10px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.15);
+      border-radius: 12px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4);
       transition: transform 0.3s ease;
+      border: 2px solid var(--primary-color);
     }
     .images img:hover {
-      transform: scale(1.02);
+      transform: scale(1.03);
+      box-shadow: 0 8px 25px rgba(138, 43, 226, 0.5);
     }
     ul {
       list-style: none;
       padding: 0;
     }
     ul li {
-      padding: 12px 0;
+      padding: 12px 15px;
       font-size: 16px;
-      border-bottom: 1px solid #eee;
+      border-bottom: 1px solid rgba(138, 43, 226, 0.3);
       transition: all 0.3s ease;
+      margin-bottom: 8px;
+      border-radius: 8px;
+      background: rgba(26, 26, 46, 0.7);
     }
     ul li:hover {
-      background-color: #f5f9ff;
-      padding-left: 10px;
+      background: rgba(138, 43, 226, 0.2);
+      padding-left: 20px;
     }
     ul li strong {
-      color: var(--primary-color);
+      color: var(--accent-color);
+      font-weight: bold;
     }
     .contact div {
       margin-top: 15px;
       font-size: 16px;
-      padding: 10px;
-      border-radius: 8px;
-      background-color: #f5f9ff;
-    }
-    .highlight {
-      color: var(--primary-color);
-      font-weight: bold;
+      padding: 15px;
+      border-radius: 10px;
+      background: rgba(26, 26, 46, 0.7);
+      border: 1px solid var(--primary-color);
     }
     .video-wrapper {
       position: relative;
       padding-bottom: 56.25%;
       height: 0;
       overflow: hidden;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+      border-radius: 15px;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.4);
+      border: 2px solid var(--primary-color);
     }
     .video-wrapper iframe {
       position: absolute;
@@ -222,54 +241,57 @@
       width: 100%;
       height: 100%;
       border: none;
-      border-radius: 12px;
+      border-radius: 15px;
     }
     .social-link {
       display: inline-flex;
       align-items: center;
       margin-right: 15px;
-      margin-top: 10px;
+      margin-top: 15px;
       text-decoration: none;
       color: white;
       font-weight: bold;
       transition: all 0.3s ease;
-      padding: 10px 15px;
-      border-radius: 8px;
+      padding: 12px 20px;
+      border-radius: 30px;
       background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 15px rgba(138, 43, 226, 0.4);
     }
     .social-link img {
       width: 28px;
       height: 28px;
-      margin-right: 8px;
+      margin-right: 10px;
     }
     .social-link:hover {
       transform: translateY(-3px);
-      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+      box-shadow: 0 8px 20px rgba(138, 43, 226, 0.6);
     }
     .copy-btn {
       margin-left: 10px;
-      padding: 5px 10px;
-      font-size: 12px;
-      background-color: var(--accent-color);
-      color: white;
+      padding: 6px 12px;
+      font-size: 14px;
+      background: var(--accent-color);
+      color: #000;
       border: none;
-      border-radius: 5px;
+      border-radius: 30px;
       cursor: pointer;
       transition: all 0.3s ease;
+      font-weight: bold;
     }
     .copy-btn:hover {
-      background-color: #009acd;
+      background: var(--highlight-color);
       transform: translateY(-2px);
     }
     .qr-container {
       text-align: center;
-      margin: 20px 0;
+      margin: 25px 0;
     }
     .qr-container img {
-      border: 2px solid #eee;
+      border: 3px solid var(--primary-color);
       padding: 10px;
       background: white;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
     }
   </style>
 </head>
@@ -344,10 +366,9 @@
     </div>
     <div class="qr-container">
       <strong>PromptPay QR:</strong><br>
-      <img src="https://raw.githubusercontent.com/JHKVPN/VIP/main/image/pp.png" alt="PromptPay QR"
-        style="width: 200px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.2);" />
+      <img src="https://raw.githubusercontent.com/JHKVPN/VIP/main/image/pp.png" alt="PromptPay QR" style="width: 220px;" />
     </div>
-    <div style="margin-top: 15px; text-align: center;">
+    <div style="margin-top: 20px; text-align: center;">
       <a href="https://m.me/juehtet2025" target="_blank" class="social-link">
         <img src="https://cdn-icons-png.flaticon.com/512/2111/2111342.png" alt="Messenger" />
         Messenger Chat
